# stag

./: .gitignore  CMakeLists.txt  main.cpp
src/: Ellipse.cpp  Stag.cpp
